crates/aven-parser/tests/fixtures/parser/invalid/named-family-static.av
Ticket = {
  severity: Int
  category = "urgent"
  priority(): Int =>
    .severity
}
